--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "antd": "^3.19.1",
     "bootstrap": "4.3.1",
     "jquery": "^3.4.1",
+    "lodash": "^4.17.11",
     "popper.js": "^1.15.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
