--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "antd": "^3.19.1",
     "bootstrap": "4.3.1",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
     "lodash": "^4.17.11",
     "popper.js": "^1.15.0",
@@ -33,5 +34,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {}
 }
