--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "popper.js": "^1.15.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-lines-ellipsis": "^0.14.1",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1"
   },
