--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "antd": "^3.19.1",
+    "axios": "^0.19.0",
     "bootstrap": "4.3.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
