--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "popper.js": "^1.15.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-facebook-login": "^4.1.1",
     "react-lines-ellipsis": "^0.14.1",
     "react-redux": "^7.0.3",
     "react-router-dom": "^5.0.0",
