--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-scripts": "3.0.1",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.8",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "validator": "^11.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
